--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@ body,html {
   background-color:black;
   color:white;
   font-family: 'Poiret One', cursive;
+  font-weight: 200;
 }
 
 body {
@@ -13,7 +14,7 @@ body {
 }
 .background-image {
   width:100%;
-  height:50%;
+  height:40%;
   background-image:url('../images/background.jpg');
 }
 
@@ -40,3 +41,8 @@ a:hover{
   color:#cf39d8;
  }
  ul.nav a:hover { color: #fff !important; }
+
+ .navbar-inverse .navbar-nav>li>a {
+  color:#ff52a7;
+}
+ }
