--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,46 +1,66 @@
-body,html {
-  height: 100%;
-  background-color:black;
-  color:white;
-  font-family:  'Poiret One', cursive;
-  font-weight: 200;
+body,
+html {
+    height: 100%;
+    background-color: black;
+    color: white;
+    font-family: 'Poiret One', cursive;
+    font-weight: 200;
 }
-
 body {
-  padding-top: 50px;
+    padding-top: 50px;
 }
-.navbar-custom{
-  background-color:black;
+.navbar-custom {
+    background-color: black;
 }
 .background-image {
-  width:100%;
-  height:40%;
-  background-image:url('../images/background.jpg');
+    background: pink;
+    /* For browsers that do not support gradients */
+    
+    background: -webkit-linear-gradient(-90deg, red, pink);
+    /* For Safari 5.1 to 6.0 */
+    
+    background: -o-linear-gradient(-90deg, purple, pink);
+    /* For Opera 11.1 to 12.0 */
+    
+    background: -moz-linear-gradient(-90deg, purple, pink);
+    /* For Firefox 3.6 to 15 */
+    
+    background: linear-gradient(-90deg, purple, pink);
+    /* Standard syntax */
+    
+    height: 60%;
 }
-
+}
 .line {
-  padding-top:20px;
-  white-space:no-wrap;
-  overflow:hidden;
-  text-align:center;
+    padding-top: 20px;
+    white-space: no-wrap;
+    overflow: hidden;
+    text-align: center;
 }
-
 .vertical-center {
-  display: flex;
-  align-items: center;
+    min-height: 100%;
+    /* Fallback for browsers do NOT support vh unit */
+    
+    min-height: 100vh;
+    /* These two lines are counted as one :-)       */
+    
+    display: flex;
+    align-items: center;
 }
-.greeting{
-  font-weight:900;
-  font-size:50px;
+.greeting {
+    font-weight: 900;
+    font-size: 50px;
 }
-
 a {
-  color:#ff52a7;
+    color: #ff52a7;
 }
-
-a:hover { color: #fff ; }
-
- .navbar-inverse .navbar-nav>li>a {
-  color:#ff52a7;
-  font-weight: 400;
+a:hover {
+    color: #fff;
+}
+.navbar-inverse .navbar-nav>li>a {
+    color: #ff52a7;
+    font-weight: 400;
+}
+.test {
+    @include background-image(linear-gradient(-135deg, #01A9ED 0%, #439FE0 100%));
 }
